SERVER-9053: ttl: don't delete on non-primaries

Conflicts:
	src/mongo/db/ttl.cpp